Fix T55061: Shadows were not updated during sclupting.